acts_as_taggable ok

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -11,6 +11,10 @@
 		%br/
 		%span
 			Share your inspiration and see what's inspiring others.
+#tag_cloud
+	- tag_cloud Post.tag_counts, %w[s m l] do |tag, css_class|
+		= link_to tag.name, tag_path(tag.name), class: css_class
+
 #posts
 	- @posts.each do |post|
 		.post
