--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,18 @@
 			#logo= link_to "Muse", root_path
 			%nav
 				- if user_signed_in?
-					= link_to current_user.name, edit_user_registration_path
-					= link_to "Add New Inspiration", new_post_path, class: "button"
+					= link_to "Usuarios", users_path
+					= link_to "Conecta", activities_path
+					.dropdown
+						.dropdown-container
+							%p.dropdown-description
+							%p.dropdown-button #{current_user.name}
+							%ul.dropdown-menu.dropdown-select
+								%li= link_to "Add New Inspiration", new_post_path
+								%li= link_to "Salir", destroy_user_session_path, method: :delete
+								%li= link_to 'Mi Cuenta', edit_user_registration_path
+								%li= link_to 'Perfil', user_path(current_user.name)
+					      
 				- else
 					= link_to "Sign in", new_user_session_path
 					= link_to "Sign Up", new_user_registration_path, class: "button"
@@ -22,3 +32,4 @@
 	%p.alert= alert
 	.wrapper
 		= yield
+		
