--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,10 @@
-<div class="col-md-3">
-<div class="thumbnail">
+<div class="post">
+<div class="post_content">
 <%= link_to user_path(user.name) do %>
-	
+	<h3><%= user.name %></h3>
 <% end %>
 <div class="caption">
-<h3><%= user.name %></h3>
+
 <% if current_user %>
 <p><%= action_buttons(user)%></p>
 <% end %>
