--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -13,7 +13,13 @@
 					%li.tag
 						= raw @post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')
 				.description
-					%p= @post.description
+					= @post.description
+					#directions
+						%h2 Pasos
+						%ul
+							- @post.directions.each do |direction|
+								%li= direction.step
+								%code{"data-gist-id" => "#{direction.gist}"}
 			.post_data
 				= link_to "Visit Link", @post.link, class: "button"
 				= link_to like_post_path(@post), method: :get, class: "data" do
