--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -9,5 +9,5 @@
 			= f.simple_fields_for :directions do |direction|
 				= render 'direction_fields', :f => direction
 			.links 
-				= link_to_add_association 'add direction', f, :directions
+				= link_to_add_association 'add step', f, :directions
 		= f.button :submit
