--- a/app/views/public_activity/post/_created.html.erb
+++ b/app/views/public_activity/post/_created.html.erb
@@ -1,3 +1,7 @@
 <% if activity.trackable %>
-<p><%= link_to activity.owner.name, user_path(activity.owner.name) %> posted something <%= time_ago_in_words(activity.created_at) %> ago</p>
+<a href="javascript:void(0)" class="grid-item">
+	    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
+
+<h1><%= activity.owner.name %> posted something <%= time_ago_in_words(activity.created_at) %> ago</h1>
+</a>
 <% end %>
