--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -146,3 +146,106 @@ $tablet: new-breakpoint(max-width 965px);
 		}
 	}
 }
+
+.tags {
+  list-style: none;
+  margin: 0;
+  margin-top: 2em;
+  overflow: hidden; 
+  padding: 0;
+}
+
+.tags li {
+  float: left; 
+}
+
+.tag a{
+  background: #eee;
+  border-radius: 3px 0 0 3px;
+  color: #999;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+}
+
+.tag a::before {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px;
+}
+
+.tag a::after {
+  background: #fff;
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid #eee;
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.tag a:hover {
+  background-color: crimson;
+  color: white;
+}
+
+.tag a:hover::after {
+   border-left-color: crimson; 
+}
+
+.forms{
+	form{
+	  width: 400px;
+	  margin: 0 auto 0;
+	}
+	.input-holder{
+	  position: relative;
+	  margin: 0 0 20px;
+	}
+	label{
+		margin-bottom: 10px;
+	}
+	input,
+	textarea{
+	  margin-top: 10px;
+	  border: 2px solid #ccc;
+	  border-radius: 4px;
+	  padding: 10px;
+	  width: 100%;
+	  resize: none;
+	  transition: .3s;
+	  &:focus{
+	    border: 2px solid #999;
+	    outline: none;
+	  }
+
+	}
+	textarea{
+	  min-height: 100px;
+	}
+}
+
+.description p{
+	margin-left: 2px;
+	word-wrap: break-word;
+}
+
+.directions{
+  padding-left: 0px;
+}
+
+.steps{
+  list-style: none;
+}
