--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -25,10 +25,10 @@
 	<% case activity.trackable_type when "Post" %>
 	<div class="comment">
   <div class="comment-image">
-    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+    <img src="<%= activity.trackable.image %>">
   </div>
   <div class="comment-content">
-    <p><%= link_to activity.owner.name, user_path(activity.owner.name) %> just posts something <%=  time_ago_in_words(activity.created_at)%> ago </p>
+    <p><%= link_to activity.owner.name, user_path(activity.owner.name) %> just posts <%= link_to activity.trackable.title, activity.trackable %> <%=  time_ago_in_words(activity.created_at)%> ago </p>
     
   </div>
 </div>
