--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -24,8 +24,8 @@
 	<div class="timeline-body">
 	<% case activity.trackable_type when "Post" %>
 	<div class="comment">
-  <div class="comment-image">
-    <img src="<%= activity.trackable.image %>">
+  <div class="">
+    <img class="post-img" src="<%= activity.trackable.image %>">
   </div>
   <div class="comment-content">
     <p><%= link_to activity.owner.name, user_path(activity.owner.name) %> just posts <%= link_to activity.trackable.title, activity.trackable %> <%=  time_ago_in_words(activity.created_at)%> ago </p>
