--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -249,3 +249,13 @@ $tablet: new-breakpoint(max-width 965px);
 .steps{
   list-style: none;
 }
+
+.where{
+	padding-bottom: 5px;
+	padding-top: 5px;
+	border-top: solid rgb(228, 228, 228) 1px;
+	border-left: solid rgb(228, 228, 228) 1px;
+	border-right: solid rgb(228, 228, 228) 1px;
+	text-align: center;
+	color: black;
+}
