--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -19,7 +19,7 @@
 						%ul.directions
 							- @post.directions.each do |direction|
 								%li.steps= markdown(direction.step)
-								%p= direction.place
+								%p.where= direction.place
 								%code{"data-gist-id" => "#{direction.gist}"}
 			.post_data
 				= link_to "Visit Link", @post.link, class: "button"
@@ -43,60 +43,5 @@
 						%p.content= comment.content
 
 				= render "comments/form"
-		#random_post
-			%h3 Random Inspiration
-			.post
-				.post_image
-					= link_to (image_tag @random_post.image.url(:medium)), post_path(@random_post)
-				.post_content
-					.title
-						%h2= link_to @random_post.title, post_path(@random_post)
-					.data.clearfix
-						%p.username
-							Shared by
-							= @random_post.user.name
-						%p.buttons
-							%span
-								%i.fa.fa-comments-o
-								= @random_post.comments.count
-							%span
-								%i.fa.fa-thumbs-o-up
-								= @random_post.get_likes.size
-			%h3 Random Inspiration
-			.post
-				.post_image
-					= link_to (image_tag @random_post.image.url(:medium)), post_path(@random_post)
-				.post_content
-					.title
-						%h2= link_to @random_post.title, post_path(@random_post)
-					.data.clearfix
-						%p.username
-							Shared by
-							= @random_post.user.name
-						%p.buttons
-							%span
-								%i.fa.fa-comments-o
-								= @random_post.comments.count
-							%span
-								%i.fa.fa-thumbs-o-up
-								= @random_post.get_likes.size
-			%h3 Random Inspiration
-			.post
-				.post_image
-					= link_to (image_tag @random_post.image.url(:medium)), post_path(@random_post)
-				.post_content
-					.title
-						%h2= link_to @random_post.title, post_path(@random_post)
-					.data.clearfix
-						%p.username
-							Shared by
-							= @random_post.user.name
-						%p.buttons
-							%span
-								%i.fa.fa-comments-o
-								= @random_post.comments.count
-							%span
-								%i.fa.fa-thumbs-o-up
-								= @random_post.get_likes.size
-
+		
 
